Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: "index"
+title: "Introduction"
+description: "Introduction description"
+sidebarTitle: "Sidebar title"
 ---
-
 
 Welcome there...
 
