Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Introduction"
+title: "Caelus"
 mode: "center"
+description: "Your magical companion for Sky: Children of the Light"
 ---
 
-Welcome there...
+Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
 
-tes
+See the sidebar for any help that you need.
