Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -2,6 +2,7 @@
 title: "Caelus"
 mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
+tag: "hi"
 ---
 
 Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
