Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -2,7 +2,7 @@
 title: "Caelus"
 mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
-tag: "hi"
+keywords: ["keyword1","keyword2"]
 ---
 
 Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
