Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Caelus"
+title: "Introduction"
 mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
 keywords: ["keyword1","keyword2"]
