Documentation edits made through Mintlify web editor

--- a/guide.mdx
+++ b/guide.mdx
@@ -1,6 +1,10 @@
 ---
-title: "Guide"
-description: "Welcome!"
+title: "Introduction"
+mode: "center"
+description: "Your magical companion for Sky: Children of the Light"
+keywords: ["keyword1","keyword2"]
 ---
 
-Welcome, fellow Sky kids! 🩵
+Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
+
+See the sidebar for any help that you need.
