Documentation edits made through Mintlify web editor

--- a/guide.mdx
+++ b/guide.mdx
@@ -7,3 +7,7 @@ description: "Your magical companion for Sky: Children of the Light"
 Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
 
 See the sidebar for any help that you need.
+
+<Card title="Caelus" icon="robot" iconType="regular" href="/caelus/introduction">
+  Discord application for Sky: Children of the Light.
+</Card>
