Documentation edits made through Mintlify web editor

--- a/guide.mdx
+++ b/guide.mdx
@@ -4,10 +4,8 @@ mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
 ---
 
-Welcome to the guide for Caelus, the Discord application for Sky: Children of the Light!
+This is where our guides live. See the below buttons or explore the sidebar!
 
-See the sidebar for any help that you need.
-
-<Card title="Caelus" icon="robot" iconType="regular" href="/caelus/introduction">
+<Card title="Caelus" icon="robot" iconType="regular" horizontal href="/caelus/introduction">
   Discord application for Sky: Children of the Light.
 </Card>
