Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Introduction"
 mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
+title: "thatskyapplication"
+sidebarTitle: "Home"
 ---
 
 This is where our guides live. See the below buttons or explore the sidebar!
