Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -10,3 +10,7 @@ This is where our guides live. See the below buttons or explore the sidebar!
 <Card title="Caelus" icon="robot" iconType="regular" horizontal={false} href="/caelus">
   Discord application for Sky: Children of the Light.
 </Card>
+
+<Card title="Caelus 2" icon="sparkles" href="/caelus">
+  
+</Card>
