Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -7,6 +7,6 @@ sidebarTitle: "Home"
 
 This is where our guides live. See the below buttons or explore the sidebar!
 
-<Card title="Caelus" icon="robot" iconType="regular" horizontal={false} href="/caelus/home">
-  Discord application for Sky: Children of the Light.
+<Card title="Caelus" icon="robot" iconType="regular" horizontal="false" href="/caelus/home">
+  Discord application for Sky: Children of the Light./
 </Card>
