Documentation edits made through Mintlify web editor

--- a/caelus/daily-guides.mdx
+++ b/caelus/daily-guides.mdx
@@ -29,6 +29,13 @@ Daily guides are automatically posted at 00:00 PT every day. When you first set 
   Daily guides are distributed at 00:00, but the daily quests need manual input. You can expect them to appear between 0-30 minutes.
 </Info>
 
+<img
+  src="/images/daily_guides_example.webp"
+  alt="Daily guides example"
+  title="Daily guides example"
+  style={{ width:"56%" }}
+/>
+
 The time zone in this image is UTC+00:00, which is why the timestamp states 08:00 (Sky is 8 or 7 hours behind, depending on daylight savings).
 
 You can also see an example of what shard eruptions look like here!
