--- a/index.mdx
+++ b/index.mdx
@@ -8,5 +8,5 @@ sidebarTitle: "Home"
 This is where our guides live. See the below buttons or explore the sidebar!
 
 <Card title="Caelus" icon="robot" iconType="regular" horizontal="false" href="/caelus/home">
-  Discord application for Sky: Children of the Light./
+  Discord application for Sky: Children of the Light.
 </Card>
