Documentation edits made through Mintlify web editor

--- a/caelus/friendship-actions.mdx
+++ b/caelus/friendship-actions.mdx
@@ -1,27 +1,27 @@
 ---
-title: "Daily guides"
-description: "Automated daily guides delivered straight to your Discord server!"
+title: "Friendship actions"
+description: "Express yourself with friendship actions from Sky!"
 ---
 
-<Expandable title="Permissions">
-  <Columns cols={2}>
-    <Card title="You">
-      `Manage Server`
-    </Card>
-    <Card title="Caelus">
-      - `Send Messages` for text channels and announcement channels
-      - `Send Messages in Threads` for threads
-      - `Send Messages in Posts` for forum channels
-      - `View Channel`
-    </Card>
-  </Columns>
-</Expandable>
+## Commands
 
-## Setting up daily guides
+- `/hair-tousle`
+- `/high-five`
+- `/hug`
+- `/play-fight`
 
-Use `/configure daily-guides`. That's all.
+There is also a `/krill` command for those who deserve it!
 
-## What will it look like?
+## Community GIFs
+
+<Columns cols={2}>
+  <Card img="https://cdn.thatskyapplication.com/hugs/1.gif">
+    
+  </Card>
+  <Card img={`https://cdn.thatskyapplication.com/hugs/${Math.floor(Math.random() * 99) + 1}.gif`}>
+    
+  </Card>
+</Columns>
 
 Daily guides are automatically posted at 00:00 PT every day. When you first set up daily guides, you might wonder when the next day's will come. The answer is obvious: the next day! That's 00:00, in case you _really_ needed that clarity.
 
@@ -40,7 +40,7 @@ The time zone in this image is UTC+00:00, which is why the timestamp states 08:0
 
 You can also see an example of what shard eruptions look like here!
 
-## Seeing daily guides ad hoc
+## **Seeing daily guides ad hoc**
 
 You can view daily guides at any time by using the `/daily-guides` command. This will respond ephemerally to not interrupt any ongoing conversation.
 
@@ -50,6 +50,6 @@ Daily guides are also accessible in the browser! You can share this page freely.
   View in your browser!
 </Card>
 
-## I want to help set daily guides!
+## **I want to help set daily guides!**
 
 As mentioned above, daily quests need manual input. Anyone in the [support server](https://discord.gg/BFT7EAhrNz) can update the daily quests! Please read the documentation in the server or ask around for help!
