--- a/caelus/friendship-actions.mdx
+++ b/caelus/friendship-actions.mdx
@@ -15,7 +15,7 @@ There is also a `/krill` command for those who deserve it!
 ## Community GIFs
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-  {["/images/1.gif", "/images/3.gif", "/images/36.gif", "/images/7.gif", "/images/8.gif"].map((gif) => (
+  {["/images/1.gif", "/images/3.gif", "/images/36.gif", "/images/7.gif", "/images/8.gif", "/images/44.gif"].map((gif) => (
     <div
       className="group relative bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 hover:-translate-y-1"
       key={gif}
