--- a/caelus/me.mdx
+++ b/caelus/me.mdx
@@ -11,6 +11,20 @@ You can customise how Caelus looks in your server with an icon, banner, and bio!
 
 The following may be customised:
 
-- Bio
-- Avatar
-- Banner
+<img
+  src="/images/me_modal.webp"
+  alt="Me customisation modal"
+  title="Me modal"
+  style={{ width:"49%" }}
+/>
+
+## How do I remove my customisation?
+
+Simply interact with the respective delete button and any override will be removed.
+
+<img
+  src="/images/me.webp"
+  alt="Me"
+  title="Me"
+  style={{ width:"84%" }}
+/>
