Documentation edits made through Mintlify web editor

--- a/caelus/daily-guides.mdx
+++ b/caelus/daily-guides.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Daily guides"
 description: "Automated daily guides delivered straight to your Discord server!"
+icon: "clock"
 ---
 
 <Expandable title="Permissions">
