--- a/caelus/me.mdx
+++ b/caelus/me.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Me"
 description: "Configure how Caelus looks in your server!"
+icon: "user-robot"
 ---
 
 ## Setting up how Caelus looks
