--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Welcome"
 description: "Configure welcome messages in your server!"
+icon: "door-open"
 ---
 
 ## Setting up welcome messages
