--- a/index.mdx
+++ b/index.mdx
@@ -3,6 +3,7 @@ mode: "center"
 description: "Your magical companion for Sky: Children of the Light"
 title: "thatskyapplication"
 sidebarTitle: "Home"
+icon: "house"
 ---
 
 This is where our guides live. See the below buttons or explore the sidebar!
