--- a/caelus/friendship-actions.mdx
+++ b/caelus/friendship-actions.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Friendship actions"
 description: "Express yourself with friendship actions from Sky!"
+icon: "hands-holding-heart"
 ---
 
 ## Commands
@@ -17,15 +18,15 @@ There is also a `/krill` command for those who deserve it!
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 {["/images/1.gif", "/images/3.gif", "/images/36.gif", "/images/7.gif", "/images/8.gif", "/images/44.gif"].map((gif) => (
 <div
-  className="group relative bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 hover:-translate-y-1"
-  key={gif}
+className="group relative bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 hover:-translate-y-1"
+key={gif}
 >
-  <div
-    aria-label="Friendship action GIF"
-    className="w-full aspect-square bg-cover bg-center group-hover:scale-105 transition-transform duration-300"
-    role="img"
-    style={{ backgroundImage: `url(${gif})` }}
-  />
+<div
+  aria-label="Friendship action GIF"
+  className="w-full aspect-square bg-cover bg-center group-hover:scale-105 transition-transform duration-300"
+  role="img"
+  style={{ backgroundImage: `url(${gif})` }}
+/>
 </div>
 ))}
 
