Documentation edits made through Mintlify web editor

--- a/caelus/me.mdx
+++ b/caelus/me.mdx
@@ -4,6 +4,12 @@ description: "Configure how Caelus looks in your server!"
 icon: "user-robot"
 ---
 
+<Expandable title="Permissions">
+  <Card title="You">
+    `Manage Server`
+  </Card>
+</Expandable>
+
 ## Setting up how Caelus looks
 
 You can customise how Caelus looks in your server with an icon, banner, and bio! You can do this via `/configure me`.
