--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -4,6 +4,18 @@ description: "Configure notifications in your server!"
 icon: "bell"
 ---
 
+<Expandable title="Permissions">
+  <Columns cols={2}>
+    <Card title="You">
+      `Manage Server`
+    </Card>
+    <Card title="Caelus">
+      - `Send Messages`
+      - `View Channel`
+    </Card>
+  </Columns>
+</Expandable>
+
 ## Setting up notifications
 
 You'll need a channel to send notifications in and a role for Caelus to mention. Once you have both, it's time to use `/configure notifications`!
