--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -6,4 +6,6 @@ icon: "door-open"
 
 ## Setting up welcome messages
 
-Welcome messages are sent whenever someone joins the server.
+Welcome messages are sent whenever someone joins the server. Other applications do this, but Caelus makes it Sky-themed.
+
+Setting them up is easy. Use `/configure welcome`
