Documentation edits made through Mintlify web editor

--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -12,6 +12,7 @@ icon: "bell"
     <Card title="Caelus">
       - `Send Messages`
       - `View Channel`
+      - `Mention @everyone, @here and All Roles` or the role being mentionable by anyone
     </Card>
   </Columns>
 </Expandable>
