Documentation edits made through Mintlify web editor

--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -50,11 +50,18 @@ If left enabled, both Discord and Caelus will trigger for join messages. It is r
 
 Here are some real examples of how they are used:
 
-<Columns cols={2}>
-  <Card title="Sky Sanctuary" img="/images/welcome-example-1.webp">
-    
-  </Card>
-  <Card title="Starfield💫" img="/images/welcome-example-2.webp">
-    
-  </Card>
-</Columns>
+<img
+  src="/images/welcome-example-1.webp"
+  alt="Welcome Example 1"
+  title="Welcome Example 1"
+  className="mr-auto"
+  style={{ width:"41%" }}
+/>
+
+<img
+  src="/images/welcome-example-2.webp"
+  alt="Welcome Example 2"
+  title="Welcome Example 2"
+  className="mr-auto"
+  style={{ width:"41%" }}
+/>
