Documentation edits made through Mintlify web editor

--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -33,6 +33,13 @@ Setting them up is easy. Use `/configure welcome`! Once you hit the obvious edit
 
 Enter your desired information, and a preview of what the welcome message will look like will be revealed to you!
 
+### Welcome message recommendations
+
+- `{{user}}` mentions the user who joined
+  - No other mentions will work, but they will appear correctly
+- Mentions don't autocomplete in modals. It is recommended to type it out into a text channel and then cope & paste the contents into the modal
+- Custom emojis may be used from the server & Caelus itself
+
 ### Disabling Discord join messages
 
 You may have this enabled:
