Documentation edits made through Mintlify web editor

--- a/caelus/home.mdx
+++ b/caelus/home.mdx
@@ -7,4 +7,4 @@ icon: "house"
 
 Caelus is the Discord application for Sky: Children of the Light. Whatever you need, Caelus has you covered.
 
-Check out the following!
+Check the sidebar for guides on how to set up and use Caelus!
