--- a/index.mdx
+++ b/index.mdx
@@ -11,3 +11,5 @@ This is where our guides live. See the below buttons or explore the sidebar!
 <Card title="Caelus" icon="robot" iconType="regular" horizontal="false" href="/caelus/home">
   Discord application for Sky: Children of the Light.
 </Card>
+
+This guide is open source over at [GitHub](https://github.com/thatskyapplication/guide).
