Documentation edits made through Mintlify web editor

--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -57,18 +57,14 @@ If left enabled, both Discord and Caelus will trigger for join messages. It is r
 
 Here are some real examples of how they are used:
 
-<img
-  src="/images/welcome-example-1.webp"
-  alt="Welcome Example 1"
-  title="Welcome Example 1"
-  className="mr-auto"
-  style={{ width:"41%" }}
-/>
-
-<img
-  src="/images/welcome-example-2.webp"
-  alt="Welcome Example 2"
-  title="Welcome Example 2"
-  className="mr-auto"
-  style={{ width:"41%" }}
-/>
+<Columns cols={3}>
+  <Card title="Sky Sanctuary" img="images/welcome-example-1.webp">
+    
+  </Card>
+  <Card title="Starfield💫" img="images/welcome-example-2.webp">
+    
+  </Card>
+  <Card title="Eve's Daycare" img="images/welcome-example-3.webp">
+    
+  </Card>
+</Columns>
