Documentation edits made through Mintlify web editor

--- a/caelus/welcome.mdx
+++ b/caelus/welcome.mdx
@@ -58,13 +58,13 @@ If left enabled, both Discord and Caelus will trigger for join messages. It is r
 Here are some real examples of how they are used:
 
 <Columns cols={3}>
-  <Card title="Sky Sanctuary" img="/images/welcome-example-1.webp">
-    
+  <Card title="Sky Sanctuary">
+    ![Welcome Example 1](/images/welcome-example-1.webp)
   </Card>
-  <Card title="Starfield💫" img="/images/welcome-example-2.webp">
-    
+  <Card title="Starfield💫">
+    ![Welcome Example 2](/images/welcome-example-2.webp)
   </Card>
-  <Card title="Eve's Daycare" img="/images/welcome-example-3.webp">
-    
+  <Card title="Eve's Daycare">
+    ![Welcome Example 3](/images/welcome-example-3.webp)
   </Card>
 </Columns>
