Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -8,8 +8,13 @@ icon: "house"
 
 This is where our guides live. See the below buttons or explore the sidebar!
 
-<Card title="Caelus" icon="robot" iconType="regular" horizontal="false" href="/caelus/home">
-  Discord application for Sky: Children of the Light.
-</Card>
+<Columns cols={2}>
+  <Card title="Daily guides" icon="clock" href="/caelus/daily-guides">
+    
+  </Card>
+  <Card title="Friendship actions" icon="hands-holding-heart" href="/caelus/friendship-actions">
+    
+  </Card>
+</Columns>
 
 This guide is open source over at [GitHub](https://github.com/thatskyapplication/guide).
