Documentation edits made through Mintlify web editor

--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Notifications"
-description: "Configure notifications in your server!"
+description: "Configure notifications for Sky events in your server!"
 icon: "bell"
 ---
 
