--- a/index.mdx
+++ b/index.mdx
@@ -8,13 +8,27 @@ icon: "house"
 
 This is where our guides live. See the below buttons or explore the sidebar!
 
+## Check these out first!
+
 <Columns cols={2}>
   <Card title="Daily guides" icon="clock" href="/caelus/daily-guides">
-    
+    Automated daily guides delivered straight to your Discord server & [browser!](https://thatskyapplication.com/daily-guides)
   </Card>
   <Card title="Friendship actions" icon="hands-holding-heart" href="/caelus/friendship-actions">
-    
+    Express yourself with the same friendship actions from Sky! Also includes krilling!
+  </Card>
+  <Card title="Me" icon="user-robot" href="/caelus/me">
+    Configure how Caelus looks in your server!
+  </Card>
+  <Card title="Notifications" icon="bell" href="/caelus/notifications">
+    Configure notifications for Sky events in your server!
   </Card>
 </Columns>
 
-This guide is open source over at [GitHub](https://github.com/thatskyapplication/guide).
+## Translating
+
+Caelus is translated into many languages, and we're always looking for new translators. If you feel like this is something you can do, why not check out how to translate?
+
+<Card title="Crowdin" icon="language" horizontal href="/crowdin" cta="See how to translate!">
+  Everyone can translate Caelus into their own language. Even you!
+</Card>
