Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ This is where our guides live. See the below buttons or explore the sidebar!
 
 <Columns cols={2}>
   <Card title="Daily guides" icon="clock" href="/caelus/daily-guides">
-    Automated daily guides delivered straight to your Discord server & [browser!](https://thatskyapplication.com/daily-guides)
+    Automated daily guides delivered straight to your Discord server & browser!
   </Card>
   <Card title="Friendship actions" icon="hands-holding-heart" href="/caelus/friendship-actions">
     Express yourself with the same friendship actions from Sky! Also includes krilling!
