--- a/crowdin.mdx
+++ b/crowdin.mdx
@@ -15,9 +15,9 @@ You need to sign up to start translating. Then, simply translate away!
 
 ## Translator role
 
-In Discord, there is no way to identify which Crowdin user belongs to which Discord account. The Translator role serves that purpose and lets others know you help translate.
+In the [support server](https://discord.com/invite/Y7d6xGX9nG), there is no way to identify which Crowdin user belongs to which Discord account. The Translator role serves that purpose and lets others know you help translate.
 
-To obtain the role, visit https://thatskyapplication.com/discord-crowdin to begin the process. Once successful, you'll have the role! You obviously have to be in the [support server](https://discord.com/invite/Y7d6xGX9nG).
+To obtain the role, visit https://thatskyapplication.com/discord-crowdin to begin the process. Once successful, you'll have the role!
 
 ## Help
 
