Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -6,9 +6,7 @@ sidebarTitle: "Home"
 icon: "house"
 ---
 
-This is where our guides live. See the below buttons or explore the sidebar!
-
-## Check these out first!
+## Featured guides
 
 <Columns cols={2}>
   <Card title="Daily guides" icon="clock" href="/caelus/daily-guides">
@@ -25,6 +23,8 @@ This is where our guides live. See the below buttons or explore the sidebar!
   </Card>
 </Columns>
 
+You can find more by exploring the sidebar!
+
 ## Translating
 
 Caelus is translated into many languages, and we're always looking for new translators. If you feel like this is something you can do, why not check out how to translate?
@@ -32,3 +32,14 @@ Caelus is translated into many languages, and we're always looking for new trans
 <Card title="Crowdin" icon="language" horizontal href="/crowdin" cta="See how to translate!">
   Everyone can translate Caelus into their own language. Even you!
 </Card>
+
+---
+
+<Columns cols={2}>
+  <Card title="Invite Caelus" icon="link" horizontal href="https://discord.com/oauth2/authorize?client_id=982740693070012506">
+    Your Sky companion is ready to help~
+  </Card>
+  <Card title="Support server" icon="circle-question" horizontal href="https://discord.com/invite/Y7d6xGX9nG">
+    Need help? Feel free to join and ask away~
+  </Card>
+</Columns>
