--- a/index.mdx
+++ b/index.mdx
@@ -35,11 +35,14 @@ Caelus is translated into many languages, and we're always looking for new trans
 
 ---
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card title="Invite Caelus" icon="link" horizontal href="https://discord.com/oauth2/authorize?client_id=982740693070012506">
     Your Sky companion is ready to help~
   </Card>
   <Card title="Support server" icon="circle-question" horizontal href="https://discord.com/invite/Y7d6xGX9nG">
     Need help? Feel free to join and ask away~
+  </Card>
+  <Card title="thatskyapplication" icon="globe" horizontal>
+    Leave the guide and return to the main website.
   </Card>
 </Columns>
