Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -42,7 +42,7 @@ Caelus is translated into many languages, and we're always looking for new trans
   <Card title="Support server" icon="circle-question" horizontal href="https://discord.com/invite/Y7d6xGX9nG">
     Need help? Feel free to join and ask away~
   </Card>
-  <Card title="thatskyapplication" icon="globe" horizontal>
+  <Card title="thatskyapplication" icon="globe" horizontal href="https://thatskyapplication.com">
     Leave the guide and return to the main website.
   </Card>
 </Columns>
