Documentation edits made through Mintlify web editor

--- a/caelus/daily-guides.mdx
+++ b/caelus/daily-guides.mdx
@@ -53,4 +53,4 @@ Daily guides are also accessible in the browser! You can share this page freely.
 
 ## I want to help set daily guides!
 
-As mentioned above, daily quests need manual input. Anyone in the [support server](https://discord.gg/BFT7EAhrNz) can update the daily quests! Please read the documentation in the server or ask around for help!
+As mentioned above, daily quests need manual input. Anyone in the [support server](https://discord.gg/Y7d6xGX9nG) can update the daily quests! Please read the documentation in the server or ask around for help!
