--- a/caelus/friendship-actions.mdx
+++ b/caelus/friendship-actions.mdx
@@ -22,10 +22,10 @@ className="group relative bg-white dark:bg-gray-800 rounded-xl overflow-hidden s
 key={gif}
 >
 <div
-  aria-label="Friendship action GIF"
-  className="w-full aspect-square bg-cover bg-center group-hover:scale-105 transition-transform duration-300"
-  role="img"
-  style={{ backgroundImage: `url(${gif})` }}
+aria-label="Friendship action GIF"
+className="w-full aspect-square bg-cover bg-center group-hover:scale-105 transition-transform duration-300"
+role="img"
+style={{ backgroundImage: `url(${gif})` }}
 />
 </div>
 ))}
@@ -45,7 +45,7 @@ Love what you see? These were all created by our amazing community! You can cont
 - Must not exceed 5 MB
 - Must not have noticeable compression
 
-Once you've ensured your GIF meets the requirements, head over to our [support server](https://discord.gg/BFT7EAhrNz) and check out the #friendship-actions channel to get started!
+Once you've ensured your GIF meets the requirements, head over to our [support server](https://discord.gg/Y7d6xGX9nG) and check out the #friendship-actions channel to get started!
 
 <Tip>
   You may also submit a raw video and we'll try our best!
