Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -29,7 +29,7 @@ You can find more by exploring the sidebar!
 
 Caelus is translated into many languages, and we're always looking for new translators. If you feel like this is something you can do, why not check out how to translate?
 
-<Card title="Crowdin" icon="language" horizontal href="/crowdin" cta="See how to translate!">
+<Card title="Translating" icon="language" horizontal href="/translating" cta="See how to translate!">
   Everyone can translate Caelus into their own language. Even you!
 </Card>
 
