refactor: "docs" directory

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,16 +9,16 @@ icon: "house"
 ## Featured guides
 
 <Columns cols={2}>
-  <Card title="Daily guides" icon="clock" href="/caelus/daily-guides">
+  <Card title="Daily guides" icon="clock" href="/docs/caelus/daily-guides">
     Automated daily guides delivered straight to your Discord server & browser!
   </Card>
-  <Card title="Friendship actions" icon="hands-holding-heart" href="/caelus/friendship-actions">
+  <Card title="Friendship actions" icon="hands-holding-heart" href="/docs/caelus/friendship-actions">
     Express yourself with the same friendship actions from Sky! Also includes krilling!
   </Card>
-  <Card title="Me" icon="user-robot" href="/caelus/me">
+  <Card title="Me" icon="user-robot" href="/docs/caelus/me">
     Configure how Caelus looks in your server!
   </Card>
-  <Card title="Notifications" icon="bell" href="/caelus/notifications">
+  <Card title="Notifications" icon="bell" href="/docs/caelus/notifications">
     Configure notifications for Sky events in your server!
   </Card>
 </Columns>
@@ -29,7 +29,7 @@ You can find more by exploring the sidebar!
 
 Caelus is translated into many languages, and we're always looking for new translators. If you feel like this is something you can do, why not check out how to translate?
 
-<Card title="Translating" icon="language" horizontal href="/translating" cta="See how to translate!">
+<Card title="Translating" icon="language" horizontal href="/docs/translating" cta="See how to translate!">
   Everyone can translate Caelus into their own language. Even you!
 </Card>
 
