--- a/fr/translating.mdx
+++ b/fr/translating.mdx
@@ -19,6 +19,6 @@ In the [support server](https://discord.com/invite/Y7d6xGX9nG), there is no way 
 
 To obtain the role, visit https://thatskyapplication.com/discord-crowdin to begin the process. Once successful, you'll have the role!
 
-## Help
+## Aide
 
 Need help? Join the [support server](https://discord.com/invite/Y7d6xGX9nG) and ask around in #crowdin–our channel for translators. We'd be happy to lend you a helping hand!
