--- a/fr/translating.mdx
+++ b/fr/translating.mdx
@@ -21,4 +21,4 @@ To obtain the role, visit https://thatskyapplication.com/discord-crowdin to begi
 
 ## Aide
 
-Need help? Join the [support server](https://discord.com/invite/Y7d6xGX9nG) and ask around in #crowdin–our channel for translators. We'd be happy to lend you a helping hand!
+Besoin d'aide ? Rejoignez le [serveur d'assistance](https://discord.com/invite/Y7d6xGX9nG) et soyez libre de poser vos questions dans #crowdin–notre salon pour les traducteurs. Nous serons ravis de vous aider !
