--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -40,6 +40,7 @@ When setting up notifications, you may choose an offset. For example, choosing a
 - Travelling spirit
 - Dreams skater
 - Nesting Workshop
+- Meteor shower
 
 ## **What will it look like?**
 
