Update Caelus notifications documentation

--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -23,6 +23,16 @@ You'll need a channel to send notifications in and a role for Caelus to mention.
 
 When setting up notifications, you may choose an offset. For example, choosing an offset of 5 minutes means you will get notifications about the polluted geyser erupting 5 minutes prior to it occurring.
 
+### Offset
+
+The notification offset is how many minutes prior to the event the notification sends.
+
+For example, if you choose to set a notification offset of 5, and grandma occurs at 20:35, you would receive the notification at 20:30 stating the event would occur in 5 minutes.
+
+<Info>
+  An offset of 0 notifies when the event starts.
+</Info>
+
 ## **What notifications are available?**
 
 - Daily reset
