Add 'Maintenance' to notification types

--- a/caelus/notifications.mdx
+++ b/caelus/notifications.mdx
@@ -51,6 +51,7 @@ For example, if you choose to set a notification offset of 5, and grandma occurs
 - Dreams skater
 - Nesting Workshop
 - Meteor shower
+- Maintenance
 
 ## **What will it look like?**
 
